--- a/index.html
+++ b/index.html
@@ -41,33 +41,31 @@ body {font-family: "Lato", sans-serif}
 
 
   <div class="w3-row w3-padding-32">
+  
     <div class="w3-third">
-    <img src="assets/1vs1.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:95%">
-     
-
+      <h2 class="w3-wide">Programming languages</h2>
+      <h3 class="w3-opacity w3-center"><i> C#, C++,Java</i></h3>
     </div>
     <div class="w3-third">
-      <img src="assets/apta.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:95%">
+      <h2 class="w3-wide">Video Games Technologies</h2>
+      <h3 class="w3-opacity w3-center"><i> Unity 3D,Blender, SDL, OpenGL</i></h3>
+  
     </div>
 
     <div class="w3-third">
-      <img src="assets/gmail.png" class="w3-round" alt="Random Name" style="width:60%">
+      <h2 class="w3-wide">Others</h2>
+      <h3 class="w3-opacity w3-center"><i> Git, HTML, CSS, JS </i></h3>
     </div>
   </div>
-
-
 
 </div>
 
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
 
-
-
-  
   <!-- Project section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">MY PROJECTS</h2>
-    <p class="w3-opacity"><i>There you go some of my projects</i></p>
+    <p class="w3-opacity"><i>There you go some games I made as a programmer and artist</i></p>
 
     <div class="mySlides w3-display-container w3-center">
       <img src="assets/1vs1.png" style="width:100%">
