--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ body {font-family: "Lato", sans-serif}
   <p class="w3-opacity w3-center"><i>Hi, I'm Amparo Rubio Bellon, a junior programmer, 2D artist and game developer</i></p>
   <p class="w3-opacity w3-center"><i></i> I am an enthusiast videogame development student at the Complutense University of Madrid, a junior programmer 💻 and an artist.</p> 
 
+  <!-- Social media -->
 
   <div class="w3-row w3-padding-32">
   
@@ -83,21 +84,18 @@ body {font-family: "Lato", sans-serif}
     </div>
 
 
-  <p class="w3-opacity"><i>You can see the code of all of them in my github</i></p>
+  <p class="w3-opacity"><i>You can see the code of all of them in my github and itchio</i></p>
 
   <div class="w3-row w3-padding-32">
     <div class="w3-third">
-      <button class="w3-button w3-black w3-section w3-center"><a href="https://amphxros.itch.io/fighter-traighter">Ai demos</a></button>
+      <button class="w3-button w3-black w3-section w3-center"><a href="https://amphxros.itch.io/fighter-traighter">Fighter Traighter</a></button>
       <img src="assets/1vs1.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:95%">
-      <p class="w3-opacity"><i>These demos show the behaviour of algoritms like A*</i></p>
-
-
+      <p class="w3-opacity"><i></i></p>
     </div>
 
     <div class="w3-third">
-      <button class="w3-button w3-black w3-section w3-center"> Trees (WIP)</a></button>
+      <button class="w3-button w3-black w3-section w3-center"> Apta</a></button>
       <img src="assets/apta.png" class="w3-round" alt="Random Name" style="width:95%">
-      <p class="w3-opacity"><i>A Tool for making ai of decition making in unity </i></p>
     </div>
   </div>
 
