--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {font-family: "Lato", sans-serif}
     <div class="mySlides w3-display-container w3-center">
       <img src="assets/apta.png" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-        <button class="w3-button w3-black w3-section w3-center"><a href="https://amphxros.itch.io/apta">Apta</a></button>
+        <h3>Apta </h3>
          <p><b>Serious game made in Unity for encouraging women to study enginering studies</b></p>    
       </div>
     </div>
