--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body {font-family: "Lato", sans-serif}
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+<footer class="w3-container w3-padding-64 w3-right w3-opacity w3-light-grey w3-xlarge">
   <i class="fa fa-github w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
