--- a/index.html
+++ b/index.html
@@ -64,21 +64,20 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
 
   <!-- Project section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">MY PROJECTS</h2>
+   <h2 class="w3-wide">MY PROJECTS</h2>
     <p class="w3-opacity"><i>There you go some games I made as a programmer and artist</i></p>
 
     <div class="mySlides w3-display-container w3-center">
       <img src="assets/1vs1.png" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Fighter Traighter</h3>
-        <p><b> Fighter game made in c++</b></p>   
+        <p><b> Fighter game made in c++ and sdl </b></p>   
       </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
       <img src="assets/apta.png" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-        <h3>Apta </h3>
+        <h3>APTA </h3>
          <p><b>Serious game made in Unity for encouraging women to study enginering studies</b></p>    
       </div>
     </div>
@@ -99,7 +98,6 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
-
 </div>
 
   <!-- The Tour Section -->
@@ -107,7 +105,19 @@ body {font-family: "Lato", sans-serif}
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:600px" id="contact">
     <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>You can contact me</i></p>
+    <p class="w3-opacity w3-center"><i>You can contact me in:</i></p>
+    <div class="w3-row w3-padding-32">
+  
+      <div class="w3-third">
+        <button class="w3-button w3-white w3-section w3-center"><a href=https://github.com/amprubio>Github</a></button>
+        <button class="w3-button w3-white w3-section w3-center"><a href="https://amphxros.itch.io/">Itchio</a></button>
+      </div>
+      <div class="w3-third">
+        <button class="w3-button w3-white w3-section w3-center"><a href=https://www.linkedin.com/in/amparo-rubio-bellon/>LinkedIn</a></button>
+        <button class="w3-button w3-white w3-section w3-center"><a href=https://twitter.com/AmphxrosDev>Twitter</a></button>
+      </div>
+     
+    </div>
  
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
@@ -140,10 +150,8 @@ body {font-family: "Lato", sans-serif}
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-right w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-github w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  
 </footer>
 
 <script>
