--- a/index.html
+++ b/index.html
@@ -66,19 +66,28 @@ body {font-family: "Lato", sans-serif}
   <!-- Project section -->
    <h2 class="w3-wide">MY PROJECTS</h2>
     <p class="w3-opacity"><i>There you go some games I made as a programmer and artist</i></p>
-
+    <!-- Fighter Traighter -->
     <div class="mySlides w3-display-container w3-center">
       <img src="assets/1vs1.png" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Fighter Traighter</h3>
-        <p><b> Fighter game made in c++ and sdl </b></p>   
+        <p><b> Fighter game made in c++ and sdl. I was in charge of programming and art </b></p>   
       </div>
     </div>
+    <!-- Apta -->
     <div class="mySlides w3-display-container w3-center">
       <img src="assets/apta.png" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>APTA </h3>
-         <p><b>Serious game made in Unity for encouraging women to study enginering studies</b></p>    
+         <p><b>Serious game made in Unity for encouraging women to study enginering studies.</b></p>    
+      </div>
+    </div>
+<!-- Trails -->
+    <div class="mySlides w3-display-container w3-center">
+      <img src="assets/apta.png" style="width:100%">
+      <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+        <h3>Trails</h3>
+         <p><b>A tool for making the AI of NPCs through Behaviour trees in Unity</b></p>    
       </div>
     </div>
 
@@ -86,16 +95,25 @@ body {font-family: "Lato", sans-serif}
   <p class="w3-opacity"><i>You can see the code of all of them in my github and itchio</i></p>
 
   <div class="w3-row w3-padding-32">
+    <!-- Fighter traighter -->
     <div class="w3-third">
       <button class="w3-button w3-black w3-section w3-center"><a href="https://amphxros.itch.io/fighter-traighter">Fighter Traighter</a></button>
       <img src="assets/1vs1.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:95%">
       <p class="w3-opacity"><i></i></p>
     </div>
 
+    <!-- Apta link -->
     <div class="w3-third">
       <button class="w3-button w3-black w3-section w3-center"> Apta</a></button>
       <img src="assets/apta.png" class="w3-round" alt="Random Name" style="width:95%">
     </div>
+
+    <!-- Trails link -->
+    <div class="w3-third">
+      <button class="w3-button w3-black w3-section w3-center"> Trails</a></button>
+      <img src="assets/apta.png" class="w3-round" alt="Random Name" style="width:95%">
+    </div>
+
   </div>
 
 </div>
