--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ body {font-family: "Lato", sans-serif}
     </div>
 <!-- Trails -->
     <div class="mySlides w3-display-container w3-center">
-      <img src="assets/apta.png" style="width:100%">
+      <img src="assets/background.png" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Trails</h3>
-         <p><b>A tool for making the AI of NPCs through Behaviour trees in Unity</b></p>    
+         <p><b>A tool for making the AI of NPCs through Behaviour trees in Unity. Currently in development</b></p>    
       </div>
     </div>
 
@@ -104,14 +104,14 @@ body {font-family: "Lato", sans-serif}
 
     <!-- Apta link -->
     <div class="w3-third">
-      <button class="w3-button w3-black w3-section w3-center"> Apta</a></button>
+      <button class="w3-button w3-black w3-section w3-center"><a> Apta</a></button>
       <img src="assets/apta.png" class="w3-round" alt="Random Name" style="width:95%">
     </div>
 
     <!-- Trails link -->
     <div class="w3-third">
-      <button class="w3-button w3-black w3-section w3-center"> Trails</a></button>
-      <img src="assets/apta.png" class="w3-round" alt="Random Name" style="width:95%">
+      <button class="w3-button w3-black w3-section w3-center"><a href="https://github.com/amprubio/Trails"> Trails</a></button>
+      <img src="assets/background.png" class="w3-round" alt="Random Name" style="width:95%">
     </div>
 
   </div>
