--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <title>Portfolio</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> --> 
+<!-- <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<!-- <link href="https://github.com/Gioni06/terminal.css/blob/2bd171f93dc2f57dcb5c0999ff47c4916556f7af/lib/terminal.css" rel="stylesheet" > -->
+
+
+<LINK href="http://dl.dropbox.com/u/4947039/ZC-List.css" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link href="https://github.com/papercss/papercss/blob/master/src/styles.scss" rel = "stylesheet">
+<link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" > 
 
 <style>
 body {font-family: "Lato", sans-serif}
@@ -61,7 +69,7 @@ body {font-family: "Lato", sans-serif}
 
 </div>
 
-<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="projects">
 
   <!-- Project section -->
    <h2 class="w3-wide">MY PROJECTS</h2>
