Cambios casi finales

--- a/thing.html
+++ b/thing.html
@@ -10,7 +10,7 @@
     <img src="assets/fotico.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:25%">
          
     <p class="w3-opacity w3-center"><i>Hi, I'm Amparo Rubio Bellon, a junior programmer, 2D artist and game developer</i></p>
-    <p class="w3-opacity w3-center"><i></i> I am an enthusiast videogame development student at the Complutense University of Madrid, a junior programmer 💻 and an artist.</p> 
+    <p class="w3-opacity w3-center"><i></i> I am , a junior programmer 💻 and an artist.</p> 
   
     <!-- Social media -->
   
