--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- <link href="css/paper.css" rel="stylesheet"> -->
+ <link href="css/paper.css" rel="stylesheet"> 
 <link href="https://github.com/amprubio/Portfolio/blob/main/css/paper.css" rel="stylesheet">
 <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" > 
 
