--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://github.com/amprubio/Portfolio/blob/main/css/paper.css" rel="stylesheet">
 <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" > 
 
-
+<link rel="shortcut icon" type="image/x-icon" href="assets/amphLogo.png" />
 
 
  <!-- Up navbar -->
